--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Example Web app using Ceramic and Glaze"
     />
-    <title>Glaze demo notes app</title>
+    <title>Ceramic ui</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
